Removing designer change

--- a/Microsoft.CosmosDB.PITRWithRestore/Microsoft.CosmosDB.PITRWithRestore.csproj
+++ b/Microsoft.CosmosDB.PITRWithRestore/Microsoft.CosmosDB.PITRWithRestore.csproj
@@ -95,9 +95,7 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="packages.config"/>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
