Adding error tracking to failure collections and details for successful backups

--- a/Microsoft.CosmosDB.PITRWithRestoreTests/App.config
+++ b/Microsoft.CosmosDB.PITRWithRestoreTests/App.config
@@ -14,7 +14,7 @@
     <add key="CosmosDBAuthKey" value=""/>
     <add key="DatabaseName" value="testDatabase"/>
     <add key="CollectionName" value="testColl"/>
-    <add key="OfferThroughput" value="25000"/>
+    <add key="OfferThroughput" value="6000"/>
     <add key="PartitionKeyName" value="/partitionKey"/>
 
     <!-- 1.2 Lease Data specifics -->
@@ -25,6 +25,7 @@
     <add key="leaseCollectionName" value="leases" />
     <add key="leaseCollectionPartitionKey" value="/id" />
     <add key="leaseThroughput" value="400" />
+    <add key="FeedPollDelayInSeconds" value="60" />
 
     <!-- 1.3 Backup Failure Tracking Collection -->
     <add key="BackupFailureDatabaseName" value="testDatabase" />
