--- a/Microsoft.CosmosDB.PITRWithRestore/App.config
+++ b/Microsoft.CosmosDB.PITRWithRestore/App.config
@@ -15,7 +15,7 @@
     <add key="CosmosDBEndpointUri" value="" />
     <add key="CosmosDBAuthKey" value="" />
     <add key="DatabaseName" value="testDatabase" />
-    <add key="CollectionName" value="testColl" />
+    <add key="CollectionName" value="deloitteTest4" />
     
     <!-- 1.2 Lease Data specifics -->
     <add key="recreateLeaseCollection" value="true" />
@@ -25,6 +25,7 @@
     <add key="leaseCollectionName" value="leases" />
     <add key="leaseCollectionPartitionKey" value="/id" />
     <add key="leaseThroughput" value="400" />
+    <add key="FeedPollDelayInSeconds" value="60" />
     
     <!-- 1.3 Backup Failure Tracking Collection -->
     <add key="BackupFailureDatabaseName" value="testDatabase" />
