--- a/Microsoft.CosmosDB.PITRWithRestore/Microsoft.CosmosDB.PITRWithRestore.csproj
+++ b/Microsoft.CosmosDB.PITRWithRestore/Microsoft.CosmosDB.PITRWithRestore.csproj
@@ -40,8 +40,9 @@
       <HintPath>..\packages\Microsoft.Azure.CosmosDB.BulkExecutor.1.3.0\lib\net451\Microsoft.Azure.CosmosDB.BulkImport.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Azure.Documents.ChangeFeedProcessor, Version=2.2.6.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Azure.DocumentDB.ChangeFeedProcessor.2.2.6\lib\net45\Microsoft.Azure.Documents.ChangeFeedProcessor.dll</HintPath>
+    <Reference Include="Microsoft.Azure.Documents.ChangeFeedProcessor, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Azure.DocumentDB.ChangeFeedProcessor.2.2.5\lib\net45\Microsoft.Azure.Documents.ChangeFeedProcessor.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Azure.Documents.Client, Version=2.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Azure.DocumentDB.2.1.3\lib\net45\Microsoft.Azure.Documents.Client.dll</HintPath>
@@ -92,6 +93,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Backup\BackupExecutor.cs" />
+    <Compile Include="Backup\BackupFailureDocument.cs" />
+    <Compile Include="Backup\BackupSuccessDocument.cs" />
     <Compile Include="BlobStorage\BlobStorageHelper.cs" />
     <Compile Include="CosmosDB\CosmosDBHelper.cs" />
     <Compile Include="Observer\DocumentFeedObserver.cs" />
