--- a/Microsoft.CosmosDB.PITRWithRestore/Microsoft.CosmosDB.PITRWithRestore.csproj
+++ b/Microsoft.CosmosDB.PITRWithRestore/Microsoft.CosmosDB.PITRWithRestore.csproj
@@ -36,6 +36,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AsyncEnumerable, Version=2.2.2.0, Culture=neutral, PublicKeyToken=0426b068161bd1d1, processorArchitecture=MSIL">
+      <HintPath>packages\AsyncEnumerator.2.2.2\lib\net45\AsyncEnumerable.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Azure.CosmosDB.BulkImport, Version=2.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Azure.CosmosDB.BulkExecutor.1.3.0\lib\net451\Microsoft.Azure.CosmosDB.BulkImport.dll</HintPath>
       <Private>True</Private>
@@ -84,6 +87,9 @@
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.3.0\lib\netstandard1.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Threading.Tasks.Dataflow, Version=4.6.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Threading.Tasks.Dataflow.4.9.0\lib\portable-net45+win8+wpa81\System.Threading.Tasks.Dataflow.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -97,6 +103,9 @@
     <Compile Include="Backup\BackupSuccessDocument.cs" />
     <Compile Include="BlobStorage\BlobStorageHelper.cs" />
     <Compile Include="CosmosDB\CosmosDBHelper.cs" />
+    <Compile Include="Logger\ConsoleLogger.cs" />
+    <Compile Include="Logger\ILogger.cs" />
+    <Compile Include="Logger\LogAnalyticsLogger.cs" />
     <Compile Include="Observer\DocumentFeedObserver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
