--- a/Microsoft.CosmosDB.PITRWithRestore/packages.config
+++ b/Microsoft.CosmosDB.PITRWithRestore/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AsyncEnumerator" version="2.2.2" targetFramework="net46" />
   <package id="Microsoft.Azure.CosmosDB.BulkExecutor" version="1.3.0" targetFramework="net452" />
   <package id="Microsoft.Azure.DocumentDB" version="2.1.3" targetFramework="net452" />
   <package id="Microsoft.Azure.DocumentDB.ChangeFeedProcessor" version="2.2.6" targetFramework="net46" />
@@ -12,5 +13,6 @@
   <package id="System.Diagnostics.Contracts" version="4.0.1" targetFramework="net46" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.3.0" targetFramework="net452" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net46" />
   <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net46" />
 </packages>
