Adding updated App.config

--- a/Microsoft.CosmosDB.PITRWithRestore/App.config
+++ b/Microsoft.CosmosDB.PITRWithRestore/App.config
@@ -6,6 +6,12 @@
   <appSettings>
     <!-- Mode of Operation - Backup or Restore -->
     <add key="ModeOfOperation" value="Backup" />
+
+    <add key="PushLogsToLogAnalytics" value="true" />
+    <add key="LogAnalyticsWorkSpaceId" value="" />
+    <add key="LogAnalyticsApplicationKey" value="" />
+    <add key="ApiVersion" value="2016-04-01" />
+    <add key="LogType" value="ApplicationLog" />
     
     <!-- ****************************** -->
     <!-- 1. Backup Mode Configurations. -->
@@ -14,8 +20,8 @@
     <!-- 1.1 Monitored Data specifics -->
     <add key="CosmosDBEndpointUri" value="" />
     <add key="CosmosDBAuthKey" value="" />
-    <add key="DatabaseName" value="testDatabase" />
-    <add key="CollectionName" value="deloitteTest4" />
+    <add key="DatabaseName" value="" />
+    <add key="CollectionName" value="" />
     
     <!-- 1.2 Lease Data specifics -->
     <add key="recreateLeaseCollection" value="true" />
@@ -39,9 +45,14 @@
     <add key="BackupSuccessCollectionThroughput" value="6000" />
     <add key="BackupSuccessCollectionPartitionKey" value="/id" />
 
+    <add key="MaxBackupsPerBlobFile" value="100" />
+
     <!-- 1.4 Storage Account Connection String -->
     <add key="BlobStorageConnectionString" value="" />
 
+    <!-- 1.5 Flag to enable/disable compression when backing up data to Blob Storage -->
+    <add key="UseCompression" value="false" />
+         
     <!-- ****************************** -->
     <!-- 2. Restore Mode Configurations. -->
     <!-- ****************************** -->
@@ -57,8 +68,8 @@
     <!-- 2.3 Restorecollection details -->
     <add key="RestoreDatabaseName" value="RestoreDatabase" />    
     <add key="RestoreCollectionName" value="RestoreCollection" />
-    <add key="RestoreCollectionThroughput" value="60000" />
-    <add key="RestoreCollectionPartitionKey" value="/partitionKey" />
+    <add key="RestoreCollectionThroughput" value="660000" />
+    <add key="RestoreCollectionPartitionKey" value="/id" />
 
     <!-- 2.3.1 Restore helper collection details -->
     <add key="RestoreHelperDatabaseName" value="RestoreDatabase" />
@@ -77,6 +88,13 @@
     <add key="RestoreFailureCollectionName" value="RestoreFailureCollection" />
     <add key="RestoreFailureCollectionThroughput" value="6000" />
     <add key="RestoreFailureCollectionPartitionKey" value="/id" />
+
+    <!-- 2.5 Degree of parallelism to use during restore -->
+    <add key="DegreeOfParallelism" value="5" />
+    <add key="NumWorkersForRestore" value="20" />
+
+    <!-- 2.6 Specific backup containers to restore -->
+    <add key="BackupContainersToRestore" value="" />
     
   </appSettings>
   <runtime>
