Adding App.config changes

--- a/Microsoft.CosmosDB.PITRWithRestore/App.config
+++ b/Microsoft.CosmosDB.PITRWithRestore/App.config
@@ -7,43 +7,37 @@
     <!-- Mode of Operation - Backup or Restore -->
     <add key="ModeOfOperation" value="Backup" />
 
-    <add key="PushLogsToLogAnalytics" value="true" />
+    <add key="PushLogsToLogAnalytics" value="false" />
     <add key="LogAnalyticsWorkSpaceId" value="" />
     <add key="LogAnalyticsApplicationKey" value="" />
     <add key="ApiVersion" value="2016-04-01" />
     <add key="LogType" value="ApplicationLog" />
-    
+
     <!-- ****************************** -->
     <!-- 1. Backup Mode Configurations. -->
     <!-- ****************************** -->
-    
+
     <!-- 1.1 Monitored Data specifics -->
     <add key="CosmosDBEndpointUri" value="" />
     <add key="CosmosDBAuthKey" value="" />
-    <add key="DatabaseName" value="" />
-    <add key="CollectionName" value="" />
-    
-    <!-- 1.2 Lease Data specifics -->
-    <add key="recreateLeaseCollection" value="true" />
-    <add key="leaseUri" value="" />
-    <add key="leaseSecretKey" value="" />
-    <add key="leaseDbName" value="testDatabase" />
-    <add key="leaseCollectionName" value="leases" />
-    <add key="leaseCollectionPartitionKey" value="/id" />
-    <add key="leaseThroughput" value="400" />
-    <add key="FeedPollDelayInSeconds" value="60" />
-    
-    <!-- 1.3 Backup Failure Tracking Collection -->
-    <add key="BackupFailureDatabaseName" value="testDatabase" />
-    <add key="BackupFailureCollectionName" value="BackupFailureCollection" />
-    <add key="BackupFailureCollectionThroughput" value="6000" />
-    <add key="BackupFailureCollectionPartitionKey" value="/id" />
+    <add key="DatabaseName" value="testDatabase" />
+    <add key="ContainerName" value="testCollection" />
 
-    <!-- 1.4 Backup Success Tracking Collection -->
-    <add key="BackupSuccessDatabaseName" value="testDatabase" />
-    <add key="BackupSuccessCollectionName" value="BackupSuccessCollection" />
-    <add key="BackupSuccessCollectionThroughput" value="6000" />
-    <add key="BackupSuccessCollectionPartitionKey" value="/id" />
+    <!-- 1.2 Lease Data specifics -->
+    <add key="RecreateLeaseCollection" value="true" />
+    <add key="LeaseUri" value="" />
+    <add key="LeaseSecretKey" value="" />
+    <add key="LeaseDbName" value="testDatabase" />
+    <add key="LeaseContainerName" value="leases" />
+    <add key="LeaseContainerPartitionKey" value="/id" />
+    <add key="LeaseThroughput" value="4000" />
+    <add key="FeedPollDelayInSeconds" value="60" />
+
+    <!-- 1.3 Backup Status Tracking Container -->
+    <add key="BackupStatusDatabaseName" value="testDatabase" />
+    <add key="BackupStatusContainerName" value="BackupStatusContainer" />
+    <add key="BackupStatusContainerThroughput" value="6000" />
+    <add key="BackupStatusContainerPartitionKey" value="/id" />
 
     <add key="MaxBackupsPerBlobFile" value="100" />
 
@@ -52,50 +46,41 @@
 
     <!-- 1.5 Flag to enable/disable compression when backing up data to Blob Storage -->
     <add key="UseCompression" value="false" />
-         
+
     <!-- ****************************** -->
     <!-- 2. Restore Mode Configurations. -->
     <!-- ****************************** -->
-    
+
     <!-- 2.1 Start and End time for Restore-->
-    <add key="startTimeForRestore" value="1970-01-01 00:00:00" />
-    <add key="endTimeForRestore" value="2020-12-31 23:59:59" />
+    <add key="startTimeForRestore" value="1970-01-01 14:52:00" />
+    <add key="endTimeForRestore" value="2072-06-17 14:55:42" />
 
     <!-- 2.2 Restore account details -->
     <add key="RestoreAccountUri" value="" />
     <add key="RestoreAccountSecretKey" value="" />
-    
-    <!-- 2.3 Restorecollection details -->
-    <add key="RestoreDatabaseName" value="RestoreDatabase" />    
-    <add key="RestoreCollectionName" value="RestoreCollection" />
-    <add key="RestoreCollectionThroughput" value="660000" />
-    <add key="RestoreCollectionPartitionKey" value="/id" />
 
-    <!-- 2.3.1 Restore helper collection details -->
-    <add key="RestoreHelperDatabaseName" value="RestoreDatabase" />
-    <add key="RestoreHelperCollectionName" value="RestoreHelperCollection" />
-    <add key="RestoreHelperCollectionThroughput" value="6000" />
-    <add key="RestoreHelperCollectionPartitionKey" value="/id" />
-    
-    <!-- 2.4. Restore success tracking collection details -->
-    <add key="RestoreSuccessDatabaseName" value="RestoreDatabase" />
-    <add key="RestoreSuccessCollectionName" value="RestoreSuccessCollection" />
-    <add key="RestoreSuccessCollectionThroughput" value="6000" />
-    <add key="RestoreSuccessCollectionPartitionKey" value="/id" />
+    <!-- 2.3 Restore Container details -->
+    <add key="RestoreDatabaseName" value="RestoreDatabase" />
+    <add key="RestoreContainerName" value="RestoreContainer" />
+    <add key="RestoreContainerThroughput" value="100000" />
+    <add key="RestoreContainerPartitionKey" value="/id" />
 
-    <!-- 2.4.1 Restore failure tracking collection details -->
-    <add key="RestoreFailureDatabaseName" value="RestoreDatabase" />
-    <add key="RestoreFailureCollectionName" value="RestoreFailureCollection" />
-    <add key="RestoreFailureCollectionThroughput" value="6000" />
-    <add key="RestoreFailureCollectionPartitionKey" value="/id" />
+    <!-- 2.4. Restore status tracking container details -->
+    <add key="RestoreStatusDatabaseName" value="RestoreDatabase" />
+    <add key="RestoreStatusContainerName" value="RestoreStatusContainer" />
+    <add key="RestoreStatusContainerThroughput" value="6000" />
+    <add key="RestoreStatusContainerPartitionKey" value="/id" />
 
     <!-- 2.5 Degree of parallelism to use during restore -->
-    <add key="DegreeOfParallelism" value="5" />
-    <add key="NumWorkersForRestore" value="20" />
+    <add key="MaxContainersToRestorePerWorker" value="15" />
+    <add key="DegreeOfParallelism" value="1" />
+    <add key="NumWorkersForRestore" value="4" />
 
     <!-- 2.6 Specific backup containers to restore -->
     <add key="BackupContainersToRestore" value="" />
-    
+
+    <add key="DeleteBackupsAfterRestore" value="false" />
+
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
