Updated App.config to pick up newly added configurations

--- a/Microsoft.CosmosDB.PITRWithRestore/App.config
+++ b/Microsoft.CosmosDB.PITRWithRestore/App.config
@@ -5,7 +5,7 @@
   </startup>
   <appSettings>
     <!-- Mode of Operation - Backup or Restore -->
-    <add key="ModeOfOperation" value="Backup" />
+    <add key="ModeOfOperation" value="Restore" />
 
     <add key="PushLogsToLogAnalytics" value="false" />
     <add key="LogAnalyticsWorkSpaceId" value="" />
@@ -72,10 +72,10 @@
     <add key="RestoreStatusContainerPartitionKey" value="/id" />
 
     <!-- 2.5 Degree of parallelism to use during restore -->
-    <add key="MaxContainersToRestorePerWorker" value="15" />
-    <add key="DegreeOfParallelism" value="1" />
-    <add key="NumWorkersForRestore" value="4" />
-
+    <add key="MaxContainersToRestorePerWorker" value="2" />
+    <add key="HasUpdates" value="false" />
+    <add key="DegreeOfParallelism" value="5" />
+    
     <!-- 2.6 Specific backup containers to restore -->
     <add key="BackupContainersToRestore" value="" />
 
